# Todo_Chatbot_webapp

./: .gitignore  CHATBOT_QUICK_FIX.md  GEMINI_API_FIX.md  README.md  package-lock.json  package.json  pnpm-workspace.yaml  turbo.json
.claude/: settings.local.json
.claude/agents/: api-contract-validator.md  architecture-guardian.md  auth-security-auditor.md  database-consistency-guardian.md  frontend-ux-state.md  todo-phase-ii-code-reviewer.md
.specify/memory/: constitution.md
backend/: .env.example  =0.0.22  MIGRATION_GUIDE.md  TEST_IMPLEMENTATION.md  alembic.ini  package.json  pyproject.toml  requirements.txt  test_fix.py  test_gemini_live.py  tmpclaude-b766-cwd  todo_app.db
backend/alembic/: env.py  temp_env.py
backend/alembic/versions/: 001_initial_task.py  002_add_user.py  003_add_chat_models.py
backend/src/: database.py  main.py
backend/src/auth/: dependencies.py  jwt.py  router.py
backend/src/chatbot/: __init__.py  models.py  router.py  services.py
backend/src/core/: config.py  security.py
backend/src/models/: __init__.py  base.py  task.py  user.py
backend/src/routers/: __init__.py  tasks.py
backend/src/schemas/: task.py
backend/src/services/: __init__.py  auth_service.py  task_service.py
backend/tests/: conftest.py
backend/tests/unit/: test_chatbot_agent.py
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
history/prompts/002-todo-web-app/: 005-database-implementation-plan.plan.prompt.md  005-database-layer-tasks.tasks.prompt.md
history/prompts/003-database-schema/: 001-database-schema-spec.spec.prompt.md  1-phase-ii-database-implementation.tasks.prompt.md
history/prompts/auth-bridge/: 005-auth-bridge-implementation.implement.prompt.md
history/prompts/general/: 004-run-frontend-phase-ii.general.prompt.md
history/prompts/todo-ai-chatbot/: 1-todo-ai-chatbot-spec.spec.prompt.md  2-todo-ai-chatbot-plan.plan.prompt.md  3-chatbot-tasks.tasks.prompt.md  4-implement-phase-iii-chatbot.green.prompt.md  5-frontend-chatbot-ui.green.prompt.md
history/prompts/todo-web-app/: 001-create-fullstack-web-spec.spec.prompt.md  002-create-implementation-plan.plan.prompt.md  003-create-executable-tasks.tasks.prompt.md  004-implement-database-infrastructure-layer.general.prompt.md
specs/002-todo-web-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  tmpclaude-828b-cwd
specs/002-todo-web-app/checklists/: requirements.md
specs/002-todo-web-app/contracts/: auth.yaml  tasks.yaml
specs/002-todo-web-app/database/: plan.md  tasks.md
specs/003-database-schema/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/003-database-schema/checklists/: requirements.md
specs/003-database-schema/contracts/: openapi.yaml
specs/1-todo-ai-chatbot/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/1-todo-ai-chatbot/checklists/: requirements.md
(+21 files in other folders)
